--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     </head>
     <body>
         <div class="main-container">
-            <h1 class="main_heading">DOM parser</h1>
-            <button class="new_node_btn" onclick="addNewFormHandler()">Add new node</button>
+            <h1 class="main_heading">Service Assignment Form</h1>
+            <button class="new_node_btn" onclick="addNewFormHandler()">Assign</button>
             <table id="member_table" ></table>
             <div id="form_cont" class="hide">
                 <div class="backdrop"></div>
                 <div class="form_popup">
-                    <h1 id="form_heading">change the values</h1>
+                    
                     <form id="changeForm" >
                     
                     </form>
