--- a/index.html
+++ b/index.html
@@ -4,19 +4,17 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Open+Sans:wght@400;500&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" type="text/css" href="./res/index.css"/>
     </head>
     <body>
         <div class="main-container">
             <h1 class="main_heading">Service Assignment Form</h1>
-            <button class="new_node_btn" onclick="addNewFormHandler()">Assign</button>
-            <table id="member_table" ></table>
+            <button class="new_node_btn" onclick="addNewFormHandler()">Assign Employees</button>
+            <table id="team_table" ></table>
             <div id="form_cont" class="hide">
                 <div class="backdrop"></div>
                 <div class="form_popup">
-                    
+                    <h3 id="form_heading">Add a new Team</h3>
                     <form id="changeForm" >
-                    
                     </form>
                 </div>
             </div>
